--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -10,6 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@types/react": "17.0.1",
@@ -24,13 +28,14 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "styled-components": "^5.3.5",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react": "17.0.1",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5",
-    "@types/react": "17.0.1"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
