--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -10,6 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@types/react": "17.0.1",
@@ -28,9 +31,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react": "17.0.1",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5",
-    "@types/react": "17.0.1"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
