--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.2",
+    "@mui/icons-material": "^5.10.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@types/react": "17.0.1",
@@ -27,6 +28,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-native-paper": "5.0.0-rc.4",
     "styled-components": "^5.3.5",
     "zustand": "^3.7.1"
   },
