--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -12,23 +12,24 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@mui/material": "^5.10.2",
     "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@types/react": "17.0.1",
     "expo": "~44.0.0",
     "expo-barcode-scanner": "~11.2.0",
     "expo-status-bar": "~1.2.0",
+    "qrcode.react": "^3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-paper": "5.0.0-rc.3",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-native-paper": "5.0.0-rc.3",
     "styled-components": "^5.3.5",
     "zustand": "^3.7.1"
   },
