--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
     "zustand": "^3.7.1"
   },
