--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "17.0.1",
-    "@types/react-native": "~0.64.12",
+    "@types/react": "18.0.0",
+    "@types/react-native": "^0.69.5",
     "typescript": "~4.3.5"
   },
   "private": true
