--- a/tsmsp-frontend-template-master/package.json
+++ b/tsmsp-frontend-template-master/package.json
@@ -26,10 +26,10 @@
     "react-native": "^0.69.5",
     "react-native-paper": "5.0.0-rc.3",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7",
     "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
     "zustand": "^3.7.1",
