--- a/tsmsp-frontend-template-master/tsconfig.json
+++ b/tsmsp-frontend-template-master/tsconfig.json
@@ -30,7 +30,7 @@
       "Utils/*": ["Utils/*"]
     },
     "types": [
-      "reflect-metadata",
+//      "reflect-metadata",
       "node"
     ],
     "jsx": "react-native"
